--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -359,7 +359,6 @@ allow 185.220.101.138;
 allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.140;
-allow 185.220.101.141;
 allow 185.220.101.142;
 allow 185.220.101.143;
 allow 185.220.101.144;
@@ -937,7 +936,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -945,12 +943,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1338,7 +1336,6 @@ allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
-allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
@@ -1504,6 +1501,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:6a81:a:1a7::;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1665,6 +1663,7 @@ allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.137.99.16;
+allow 45.137.99.182;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1761,6 +1760,7 @@ allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.180.254.251;
 allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
