--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,6 +128,7 @@ allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
+allow 124.198.131.223;
 allow 124.198.131.253;
 allow 124.198.131.62;
 allow 124.198.132.13;
@@ -494,6 +495,7 @@ allow 185.247.184.33;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
+allow 185.28.47.22;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.40.4.100;
@@ -637,7 +639,7 @@ allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
-allow 198.167.206.222;
+allow 198.167.206.167;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -685,6 +687,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:f00:5600::5ad6:7567;
 allow 2001:470:1:908::9001;
+allow 2001:470:1f06:2b4::2;
 allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -730,6 +733,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -816,6 +822,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.54.78;
+allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -949,6 +956,7 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1188,6 +1196,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1209,6 +1218,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:4::15;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1299,6 +1309,7 @@ allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
@@ -1546,6 +1557,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:a800:11:1:124:198:131:108;
+allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
 allow 2a12:a800:11:1:124:198:131:62;
 allow 2a12:a800:11:1:124:198:132:13;
@@ -1776,7 +1788,9 @@ allow 5.255.118.151;
 allow 5.255.118.218;
 allow 5.255.121.71;
 allow 5.255.123.158;
+allow 5.255.123.164;
 allow 5.255.125.196;
+allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1802,6 +1816,9 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
+allow 64.190.76.2;
+allow 64.190.76.3;
+allow 64.190.76.4;
 allow 64.94.85.248;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1861,6 +1878,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.120.254.132;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1927,4 +1945,5 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 98.128.173.33;
