--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -22,6 +22,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:f00:5600::5ad6:7567;
 allow 2001:470:1:908::9001;
+allow 2001:470:1f06:2b4::2;
 allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -67,6 +68,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -336,6 +340,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -357,6 +362,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:4::15;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -447,6 +453,7 @@ allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
@@ -694,6 +701,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:a800:11:1:124:198:131:108;
+allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
 allow 2a12:a800:11:1:124:198:131:62;
 allow 2a12:a800:11:1:124:198:132:13;
