--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -218,6 +218,8 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
+allow 176.65.148.133;
+allow 176.65.148.3;
 allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
@@ -947,8 +949,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1280,6 +1281,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
@@ -1607,6 +1609,7 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
+allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
@@ -1743,6 +1746,7 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
+allow 45.94.31.68;
 allow 45.95.169.102;
 allow 45.95.169.104;
 allow 45.95.169.109;
